--- a/gms/Views/Shared/_Layout.cshtml
+++ b/gms/Views/Shared/_Layout.cshtml
@@ -36,7 +36,7 @@
 	data-kt-app-sidebar-enabled="true" data-kt-app-sidebar-fixed="true" data-kt-app-sidebar-hoverable="true"
 	data-kt-app-sidebar-push-toolbar="true" data-kt-app-sidebar-push-footer="true" data-kt-app-aside-enabled="true"
 	data-kt-app-aside-fixed="true" data-kt-app-aside-push-toolbar="true" data-kt-app-aside-push-footer="true"
-	class="app-default">
+	class="app-default" data-kt-app-sidebar-minimize="on">
 	<!--begin::Theme mode setup on page load-->
 	<script>var defaultThemeMode = "light"; var themeMode; if (document.documentElement) { if (document.documentElement.hasAttribute("data-bs-theme-mode")) { themeMode = document.documentElement.getAttribute("data-bs-theme-mode"); } else { if (localStorage.getItem("data-bs-theme") !== null) { themeMode = localStorage.getItem("data-bs-theme"); } else { themeMode = defaultThemeMode; } } if (themeMode === "system") { themeMode = window.matchMedia("(prefers-color-scheme: dark)").matches ? "dark" : "light"; } document.documentElement.setAttribute("data-bs-theme", themeMode); }</script>
 	<!--end::Theme mode setup on page load-->
@@ -50,11 +50,10 @@
 				<div class="d-flex flex-stack flex-grow-1">
 					<div class="app-header-logo d-flex align-items-center ps-lg-12" id="kt_app_header_logo">
 						<!--begin::Sidebar toggle-->
-						<div id="kt_app_sidebar_toggle"
-							class="app-sidebar-toggle btn btn-sm btn-icon bg-body btn-color-gray-500 btn-active-color-primary w-30px h-30px ms-n2 me-4 d-none d-lg-flex"
+						<div id="kt_app_sidebar_toggle" class="app-sidebar-toggle btn btn-sm btn-icon bg-body btn-color-gray-500 btn-active-color-primary w-30px h-30px ms-n2 me-4 d-none d-lg-flex active"
 							data-kt-toggle="true" data-kt-toggle-state="active" data-kt-toggle-target="body"
 							data-kt-toggle-name="app-sidebar-minimize">
-							<i class="ki-outline ki-abstract-14 fs-3 mt-1"></i>
+							<i class="ki-solid ki-abstract-14 fs-3"></i>
 						</div>
 						<!--end::Sidebar toggle-->
 						<!--begin::Sidebar mobile toggle-->
