--- a/gms/Views/Shared/_Layout.cshtml
+++ b/gms/Views/Shared/_Layout.cshtml
@@ -29,6 +29,9 @@
 	<link href="~/assets/plugins/global/plugins.bundle.css" rel="stylesheet" type="text/css" />
 	<link href="~/assets/css/style.bundle.css" rel="stylesheet" type="text/css" />
 	<!--end::Global Stylesheets Bundle-->
+	<!--begin::Custom Css Stylesheets-->
+	<link href="~/assets/css/customCss/custom.css" rel="stylesheet" type="text/css" />
+	<!--end::Custom Css Stylesheets-->
 </head>
 <!--end::Head-->
 <!--begin::Body-->
@@ -48,18 +51,18 @@
 			<div id="kt_app_header" class="app-header d-flex flex-column flex-stack">
 				<!--begin::Header main-->
 				<div class="d-flex flex-stack flex-grow-1">
-					<div class="app-header-logo d-flex align-items-center ps-lg-12" id="kt_app_header_logo">
+					<div class="app-header-logo d-flex align-items-center ps-lg-12" id="kt_app_header_logo" style="padding-left: 2.3rem !important;">
 						<!--begin::Sidebar toggle-->
-						<div id="kt_app_sidebar_toggle" class="app-sidebar-toggle btn btn-sm btn-icon bg-body btn-color-gray-500 btn-active-color-primary w-30px h-30px ms-n2 me-4 d-none d-lg-flex active"
+						@*<div id="kt_app_sidebar_toggle" class="app-sidebar-toggle btn btn-sm btn-icon bg-body btn-color-gray-500 btn-active-color-primary w-30px h-30px ms-n2 me-4 d-none d-lg-flex active"
 							data-kt-toggle="true" data-kt-toggle-state="active" data-kt-toggle-target="body"
 							data-kt-toggle-name="app-sidebar-minimize">
 							<i class="ki-solid ki-abstract-14 fs-3"></i>
-						</div>
+						</div>*@
 						<!--end::Sidebar toggle-->
 						<!--begin::Sidebar mobile toggle-->
 						<div class="btn btn-icon btn-active-color-primary w-35px h-35px ms-3 me-2 d-flex d-lg-none"
 							id="kt_app_sidebar_mobile_toggle">
-							<i class="ki-outline ki-abstract-14 fs-2"></i>
+							<i class="ki-solid ki-abstract-14 fs-2"></i>
 						</div>
 						<!--end::Sidebar mobile toggle-->
 						<!--begin::Logo-->
@@ -955,7 +958,16 @@
 						<div class="hover-scroll-y my-5 my-lg-2 mx-4" data-kt-scroll="true"
 							data-kt-scroll-activate="{default: false, lg: true}" data-kt-scroll-height="auto"
 							data-kt-scroll-dependencies="#kt_app_header"
-							data-kt-scroll-wrappers="#kt_app_sidebar_wrapper" data-kt-scroll-offset="5px">							
+							data-kt-scroll-wrappers="#kt_app_sidebar_wrapper" data-kt-scroll-offset="5px">
+							
+							<div class="position-relative h-40px">
+								<div id="kt_app_sidebar_toggle" class="app-sidebar-toggle-custom active position-absolute top-50" style="transform: translateY(-50%);right: 0;"
+									 data-kt-toggle="true" data-kt-toggle-state="active" data-kt-toggle-target="body"
+									 data-kt-toggle-name="app-sidebar-minimize">
+									<i class="ki-solid ki-pin fs-3"></i>
+								</div>
+							</div>
+
 							<!--begin::Sidebar menu-->
 							<div id="#kt_app_sidebar_menu" data-kt-menu="true" data-kt-menu-expand="false"
 								class="app-sidebar-menu-primary menu menu-column menu-rounded menu-sub-indention menu-state-bullet-primary px-3 mb-5">
