--- a/gms.web/Views/Home/Index.cshtml
+++ b/gms.web/Views/Home/Index.cshtml
@@ -6,10 +6,6 @@
     <h1 class="display-4">@ViewBag.WelcomeMessage</h1>
 </div> *@
 
-@{
-	ViewData["Title"] = "Home Page";
-}
-
 <!--begin::Content wrapper-->
 <div class="d-flex flex-column flex-column-fluid">
 	<!--begin::Toolbar-->
@@ -583,11 +579,11 @@
 											<!--end::Input-->
 											<!--begin::Card logos-->
 											<div class="position-absolute translate-middle-y top-50 end-0 me-5">
-												<img src="assets/media/svg/card-logos/visa.svg"
+												<img src="~/assets/media/svg/card-logos/visa.svg"
 													 alt="" class="h-25px" />
-												<img src="assets/media/svg/card-logos/mastercard.svg"
+												<img src="~/assets/media/svg/card-logos/mastercard.svg"
 													 alt="" class="h-25px" />
-												<img src="assets/media/svg/card-logos/american-express.svg"
+												<img src="~/assets/media/svg/card-logos/american-express.svg"
 													 alt="" class="h-25px" />
 											</div>
 											<!--end::Card logos-->
