--- a/gms.web/Views/Home/Index.cshtml
+++ b/gms.web/Views/Home/Index.cshtml
@@ -82,6 +82,9 @@
 						<!--begin::Nav-->
 						<div class="stepper-nav mb-5">
 							<!--begin::Step 1-->
+							<div class="text-center">
+								<h1 class="display-4">@ViewBag.WelcomeMessage</h1>
+							</div>
 							<div class="stepper-item current" data-kt-stepper-element="nav">
 								<h3 class="stepper-title">Account Type</h3>
 							</div>
@@ -117,6 +120,9 @@
 								<div class="w-100">
 									<!--begin::Heading-->
 									<div class="pb-10 pb-lg-15">
+										<div class="text-center">
+											<h1 class="display-4">@ViewBag.Welcome</h1>
+										</div>
 										<!--begin::Title-->
 										<h2 class="fw-bold d-flex align-items-center text-dark">
 											Choose Account Type
