--- a/gms.web/Views/Test/Create.cshtml
+++ b/gms.web/Views/Test/Create.cshtml
@@ -1,8 +1,4 @@
-﻿﻿@using Microsoft.AspNetCore.Localization;
-@using Microsoft.AspNetCore.Mvc.Localization;
-@model gms.common.ViewModels.CreateTestViewModel;
-
-@inject IViewLocalizer localizer;
+﻿@model CreateTestViewModel;
 @{
     ViewData["Title"] = localizer["create"];
 }
