--- a/gms.web/Views/_ViewImports.cshtml
+++ b/gms.web/Views/_ViewImports.cshtml
@@ -1,2 +1,11 @@
-﻿@using gms
+﻿@using gms;
+﻿@using Microsoft.AspNetCore.Builder;
+@using Microsoft.AspNetCore.Localization;
+@using Microsoft.AspNetCore.Mvc.Localization;
+@using Microsoft.AspNetCore.Http.Features;
+@using Microsoft.Extensions.Options;
+﻿@using System.Globalization;
+@using gms.common.ViewModels;
+@inject IViewLocalizer localizer;
+
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
