--- a/gms.web/Views/Shared/_SelectLanguage.cshtml
+++ b/gms.web/Views/Shared/_SelectLanguage.cshtml
@@ -1,11 +1,4 @@
-﻿﻿@using Microsoft.AspNetCore.Builder;
-@using Microsoft.AspNetCore.Localization;
-@using Microsoft.AspNetCore.Mvc.Localization;
-@using Microsoft.AspNetCore.Http.Features;
-@using Microsoft.Extensions.Options;
-
-@inject IViewLocalizer localizer;
-@inject IOptions<RequestLocalizationOptions> options;
+﻿@inject IOptions<RequestLocalizationOptions> options;
 @{
     IRequestCultureFeature requestCulture = Context.Features.Get<IRequestCultureFeature>();
     List<SelectListItem> cultures = options.Value.SupportedUICultures
