add gymuser entity and make it identity entity

--- a/gms.web/Areas/Identity/Pages/Account/Manage/_ManageNav.cshtml
+++ b/gms.web/Areas/Identity/Pages/Account/Manage/_ManageNav.cshtml
@@ -1,4 +1,4 @@
-﻿@inject SignInManager<IdentityUser> SignInManager
+﻿@inject SignInManager<GymUserEntity> SignInManager
 @{
     var hasExternalLogins = (await SignInManager.GetExternalAuthenticationSchemesAsync()).Any();
 }
