--- a/gms.web/Views/_ViewImports.cshtml
+++ b/gms.web/Views/_ViewImports.cshtml
@@ -6,6 +6,7 @@
 @using Microsoft.Extensions.Options;
 ﻿@using System.Globalization;
 @using gms.common.ViewModels;
+@using gms.data.Models;
 @inject IViewLocalizer localizer;
 
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
