--- a/gms.web/Views/_ViewImports.cshtml
+++ b/gms.web/Views/_ViewImports.cshtml
@@ -8,5 +8,6 @@
 @using gms.common.ViewModels;
 @using gms.data.Models;
 @inject IViewLocalizer localizer;
-
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
+
+<input type="hidden" id="localizer" value="@localizer" />
