--- a/gms.web/Views/Roles/GymRoles.cshtml
+++ b/gms.web/Views/Roles/GymRoles.cshtml
@@ -102,7 +102,7 @@
 									</td>
 									<td class="text-center">
 										<div class="d-flex justify-content-center flex-shrink-0">
-											<a asp-action="GetRolePermissions" asp-route-roleId="@item.RoleId" class="btn btn-icon btn-bg-light btn-light-primary btn-sm me-2" data-bs-toggle="tooltip" title="@localizer["edit"]" data-bs-custom-class="tooltip-inverse">
+											<a asp-action="GymRolePermissionsByRoleId" asp-route-roleId="@item.RoleId" class="btn btn-icon btn-bg-light btn-light-primary btn-sm me-2" data-bs-toggle="tooltip" title="@localizer["edit"]" data-bs-custom-class="tooltip-inverse">
 												<i class="ki-solid ki-pencil fs-2"></i>
 											</a>
 										</div>
